--- a/SportsTech.DomainModel/SportsTech.Domain.csproj
+++ b/SportsTech.DomainModel/SportsTech.Domain.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Services\Core\ClubService.cs" />
     <Compile Include="Services\Core\EventService.cs" />
     <Compile Include="Services\IClubService.cs" />
+    <Compile Include="Services\IUserService.cs" />
     <Compile Include="Services\ServiceBase.cs" />
     <Compile Include="Services\IEventService.cs" />
     <Compile Include="Services\IService.cs" />
