--- a/SportsTech.DomainModel/SportsTech.Domain.csproj
+++ b/SportsTech.DomainModel/SportsTech.Domain.csproj
@@ -47,9 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IErrorHandler.cs" />
     <Compile Include="Services\Core\ClubService.cs" />
     <Compile Include="Services\Core\EventService.cs" />
+    <Compile Include="Services\Core\TeamService.cs" />
     <Compile Include="Services\IClubService.cs" />
+    <Compile Include="Services\ITeamService.cs" />
     <Compile Include="Services\IUserService.cs" />
     <Compile Include="Services\ServiceBase.cs" />
     <Compile Include="Services\IEventService.cs" />
