--- a/SportsTech.Web/SportsTech.Web.csproj
+++ b/SportsTech.Web/SportsTech.Web.csproj
@@ -215,6 +215,7 @@
     <Compile Include="Areas\Clubs\Controllers\ClubController.cs" />
     <Compile Include="Areas\Clubs\Controllers\TeamController.cs" />
     <Compile Include="Areas\Clubs\ViewModels\Club\CreateViewModel.cs" />
+    <Compile Include="Areas\Clubs\ViewModels\Team\CreateViewModel.cs" />
     <Compile Include="Areas\Events\Controllers\ActivityController.cs" />
     <Compile Include="Areas\Events\Controllers\DashboardController.cs" />
     <Compile Include="Areas\Events\EventsAreaRegistration.cs" />
@@ -346,6 +347,9 @@
     <Content Include="Areas\Clubs\Views\Club\_ClubForm.cshtml" />
     <Content Include="Areas\Clubs\Views\Club\Index.cshtml" />
     <Content Include="Areas\Clubs\Views\Shared\_ContextMenu.cshtml" />
+    <Content Include="Areas\Clubs\Views\Team\List.cshtml" />
+    <Content Include="Areas\Clubs\Views\Team\Create.cshtml" />
+    <Content Include="Areas\Clubs\Views\Team\_TeamForm.cshtml" />
     <None Include="Scripts\jquery-2.0.3.intellisense.js" />
     <Content Include="Scripts\bootstrap.datatables.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -407,7 +411,6 @@
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Clubs\Models\" />
     <Folder Include="Areas\Clubs\ViewModels\Shared\" />
-    <Folder Include="Areas\Clubs\Views\Team\" />
     <Folder Include="Areas\Events\Models\" />
     <Folder Include="Migrations\" />
     <Folder Include="ViewModels\Dashboard\" />
