--- a/SportsTech.Web/SportsTech.Web.csproj
+++ b/SportsTech.Web/SportsTech.Web.csproj
@@ -214,6 +214,7 @@
     <Compile Include="Areas\Clubs\ClubsAreaRegistration.cs" />
     <Compile Include="Areas\Clubs\Controllers\ClubController.cs" />
     <Compile Include="Areas\Clubs\Controllers\TeamController.cs" />
+    <Compile Include="Areas\Clubs\Models\ClubAuthorizeAttribute.cs" />
     <Compile Include="Areas\Clubs\ViewModels\Club\CreateViewModel.cs" />
     <Compile Include="Areas\Clubs\ViewModels\Team\CreateViewModel.cs" />
     <Compile Include="Areas\Events\Controllers\ActivityController.cs" />
@@ -411,7 +412,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Areas\Clubs\Models\" />
     <Folder Include="Areas\Clubs\ViewModels\Shared\" />
     <Folder Include="Areas\Events\Models\" />
     <Folder Include="Migrations\" />
