--- a/SportsTech.Web/Web.Release.config
+++ b/SportsTech.Web/Web.Release.config
@@ -3,17 +3,12 @@
 <!-- For more information on using Web.config transformation visit http://go.microsoft.com/fwlink/?LinkId=301874 -->
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-  <!--
-    In the example below, the "SetAttributes" transform will change the value of
-    "connectionString" to use "ReleaseSQLServer" only when the "Match" locator
-    finds an atrribute "name" that has a value of "MyDB".
-
-    <connectionStrings>
-      <add name="MyDB"
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True"
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
-  -->
+  <connectionStrings>
+    <add name="DataContext"
+         connectionString="Data Source=REZAREPG;Initial Catalog=AndreTest;Integrated Security=SSPI;MultipleActiveResultSets=True" 
+         providerName="System.Data.SqlClient"
+         xdt:Transform="Replace" xdt:Locator="Match(name)"/>
+  </connectionStrings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
